# google-ads-mcp-extended

./: README.md  pyproject.toml
ads_mcp/: server.py
ads_mcp/heyneuron/: __init__.py
ads_mcp/heyneuron/safety/: __init__.py  audit_log.py  guards.py  preview.py
ads_mcp/heyneuron/tools/: __init__.py  ads.py  assets.py  campaigns.py  keywords.py
