[project]
name = "google-ads-mcp-extended"
version = "0.1.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "google-ads>=30.0.0",
    "mcp[cli]>=1.2.0",
    "fastmcp>=3.2.0"
]

description = "Extended Google Ads MCP Server with write operations, safety guardrails, and audit logging. Fork of googleads/google-ads-mcp by HeyNeuron."
readme = "README.md"
authors = [
    { name = "HeyNeuron", email = "kontakt@biggrowth.pl" }
]
keywords = ["Google Ads", "Google Ads API", "MCP", "HeyNeuron", "PPC", "write operations"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License"
]

[project.optional-dependencies]
dev = [
    "black",
    "nox >=2025.5.1, <2026"
]

[project.urls]
homepage = "https://github.com/Heyneuron/google-ads-mcp-extended"
repository = "https://github.com/Heyneuron/google-ads-mcp-extended.git"
issues = "https://github.com/Heyneuron/google-ads-mcp-extended/issues"
upstream = "https://github.com/googleads/google-ads-mcp"

[project.scripts]
google-ads-mcp = "ads_mcp.server:run_server"
google-ads-mcp-update-gaql = "ads_mcp.update_references:update_gaql_resource_file"
